--- a/b1s6.md
+++ b/b1s6.md
@@ -27,6 +27,23 @@ println(findEmployeeSalary("Bob"))     // Some(3000.5)
 println(findEmployeeSalary("David"))   // None
 ```
 
+### Resolución del primer ejercicio
+```scala
+val employees = List(
+  ("Alice", 30, "IT", 5000.00, "New York"),
+  ("Bob", 45, "HR", 3000.50, "Los Angeles"),
+  ("Charlie", 25, "Finance", 4500.75, "Chicago")
+)
+
+def findEmployeeSalary(name: String): Option[Double] = {
+  employees.find(_._1 == name).map(_._4)
+}
+
+println(findEmployeeSalary("Alice"))   // Some(5000.0)
+println(findEmployeeSalary("Bob"))     // Some(3000.5)
+println(findEmployeeSalary("David"))   // None
+```
+
 
 ### Ejercicio 2
 Implementa una función safeSqrt que reciba un número Double y devuelva un Try[Double]. Si el número es negativo, la función debe manejarlo con un Failure, indicando que no se puede calcular la raíz cuadrada de números negativos.
