--- a/b1s6.md
+++ b/b1s6.md
@@ -60,6 +60,20 @@ println(safeSqrt(0))    // Success(0.0)
 println(safeSqrt(-9))   // Failure(java.lang.IllegalArgumentException: No se puede calcular la raíz cuadrada de un número negativo)
 ```
 
+### Resolución del segundo ejercicio
+```scala
+import scala.util.{Try, Success, Failure}
+  def safeSqrt(x: Double): Try[Double] = {
+    Try (
+      if (x < 0) throw new IllegalArgumentException("No se puede calcular la raíz cuadrada de un número negativo")
+      else Math.sqrt(x))
+  }
+
+  println(safeSqrt(16))   // Success(4.0)
+  println(safeSqrt(0))    // Success(0.0)
+  println(safeSqrt(-9))   // Failure(java.lang.IllegalArgumentException: No se puede calcular la raíz cuadrada de un número negativo)
+```
+
 ### Calificación:
 
 Para la calificación, se debe presentar el trabajo realizado a su tutor. Es necesario recalcar que la presentación se hace una única vez, no existe la posibilidad de presentaciones adicionales con correcciones. 
