--- a/b1s6.md
+++ b/b1s6.md
@@ -64,10 +64,10 @@ println(safeSqrt(-9))   // Failure(java.lang.IllegalArgumentException: No se pue
 ```scala
 import scala.util.{Try, Success, Failure}
   def safeSqrt(x: Double): Try[Double] = {
-    Try (
-      if (x < 0) throw new IllegalArgumentException("No se puede calcular la raíz cuadrada de un número negativo")
-      else Math.sqrt(x))
+  if (x < 0) Failure(new IllegalArgumentException("No se puede calcular la raíz cuadrada de un número negativo"))
+  else Success(Math.sqrt(x))
   }
+
 
   println(safeSqrt(16))   // Success(4.0)
   println(safeSqrt(0))    // Success(0.0)
