Update b2s9.md Codigo 1 update

--- a/b2s9.md
+++ b/b2s9.md
@@ -30,6 +30,32 @@ Sensor1: 24°C, Sensor2: 34°C, Difference: 10°C
 🚨 ALERT! Significant difference detected: 10°C
 ```
 
+#### Aplicación en Código Scala
+```scala
+import rx.lang.scala.Observable
+import scala.concurrent.duration._
+import scala.util.Random
+
+object TallerB2S9 extends App{
+  // Crear flujos de dos sensores
+  val sensor1: Observable[Int] = Observable.interval(1.second).map(_ => Random.between(20, 30))
+  val sensor2: Observable[Int] = Observable.interval(1.5.second).map(_ => Random.between(30, 40))
+
+  // Combinar los flujos con zip
+  sensor1.zipWith(sensor2) { (temp1, temp2) =>
+    // Generar la diferencia entre los dos valores generados al azar
+    val tempDiference = Math.abs(temp1 - temp2)
+    println(s"Sensor1: $temp1°C, Sensor2: $temp2°C, Diferencia: $tempDiference")
+
+    // Generar mensaje por pantalla si la diferencia es mayor a 5°
+    if (tempDiference > 5) println(f"🚨 ALERT! Significant difference detected: $tempDiference%.2f°C")
+  }.take(10).subscribe()
+
+  // Mantener la aplicación corriendo por 15 segundos para mostrar los 10 pares
+  Thread.sleep(15000)
+}
+```
+
 ### Problema 2
 **Sistema de Alerta Complejo**
 
