Update b2s9.md Codigo 1 Imagen Consola

--- a/b2s9.md
+++ b/b2s9.md
@@ -56,6 +56,11 @@ object TallerB2S9 extends App{
 }
 ```
 
+#### Resultado por Consola
+
+![image](https://github.com/user-attachments/assets/c2bce9bc-9fd7-47d8-82ef-c6584e7c40e6)
+
+
 ### Problema 2
 **Sistema de Alerta Complejo**
 
