Update b2s10.md Update Ejercicio1

--- a/b2s10.md
+++ b/b2s10.md
@@ -27,6 +27,39 @@ Suma actual = 20
 Suma actual = 40
 ```
 
+#### Código Solución Scala
+```scala
+package Bim2.Semana2
+import rx._
+
+object TallerSemana9 extends App {
+  // Define un contexto implícito necesario para las operaciones reactivas
+
+  // Define un Var para almacenar la lista de calificaciones
+  val calificaciones = Var(List(0)) // Inicia como una lista con un 0
+
+  // Define un Rx que calcula automáticamente la suma
+  val suma = Rx {
+    calificaciones().sum
+  }
+
+  // Utiliza trigger para ejecutar acciones cuando cambia la suma
+  val o = suma.triggerLater {
+    println(s"La suma de las calificaciones es: ${suma.now}")
+  }
+
+  // Simula actualizaciones en las calificaciones y presenta la nueva suma
+  calificaciones() = List(85, 90, 78)
+  calificaciones() = calificaciones.now :+ 10
+  calificaciones() = calificaciones.now :+ 20
+}
+```
+
+#### Captura de funcionamiento
+
+![image](https://github.com/user-attachments/assets/cf25682e-7766-43b7-85e8-944d606f567f)
+
+
 > Adjuntar capturas de ejecución
 
 ### Problema 2: Seguimiento de coordenadas del mouse
