Update b2s10.md Update Ejercicio1

--- a/b2s10.md
+++ b/b2s10.md
@@ -33,8 +33,6 @@ package Bim2.Semana2
 import rx._
 
 object TallerSemana9 extends App {
-  // Define un contexto implícito necesario para las operaciones reactivas
-
   // Define un Var para almacenar la lista de calificaciones
   val calificaciones = Var(List(0)) // Inicia como una lista con un 0
 
@@ -43,7 +41,7 @@ object TallerSemana9 extends App {
     calificaciones().sum
   }
 
-  // Utiliza trigger para ejecutar acciones cuando cambia la suma
+  // Utiliza triggerLater para ejecutar acciones cuando cambia la suma
   val o = suma.triggerLater {
     println(s"La suma de las calificaciones es: ${suma.now}")
   }
