Update b2s10.md Update Ejercicio2

--- a/b2s10.md
+++ b/b2s10.md
@@ -68,6 +68,49 @@ Crea un programa que permita rastrear la posición del mouse en tiempo real y re
   - Calcula automáticamente la distancia del cursor al origen (0, 0) usando la fórmula de distancia euclidiana. Almacena este cálculo en una variable reactiva (definición reactiva) llamada distancia.
   - Si la distancia al origen supera un umbral dado (por ejemplo, 200 unidades), imprime un mensaje indicando que el mouse está "Fuera del rango permitido".
 
+#### Código de Scala
+```scala
+package Bim2.Semana2
+import rx._
+
+object TallerSemana9Ej2 extends App {
+  // Variables reactivas para las coordenadas del mouse (simuladas)
+  val mouseX: Var[Int] = Var(0) // Inicializadas en 0 (Origen)
+  val mouseY: Var[Int] = Var(0)
+
+  // Definición reactiva para la distancia al origen
+  val distancia: Rx[Double] = Rx {
+    Math.sqrt((mouseX() * mouseX()) + (mouseY() * mouseY()))
+  }
+
+  // Umbral para la distancia
+  val umbral: Double = 200.0
+
+  // Usa trigger para monitorear los cambios en la distancia
+  val o = distancia.trigger {
+    if (distancia.now > umbral) {
+      println(s"Fuera del rango : Distancia = ${distancia.now}")
+    } else {
+      println(s"Distancia Mouse-Origen= ${distancia.now}")
+    }
+  }
+
+  // Simula la actualización de las coordenadas del mouse con valores predefinidos
+  val posicionesSimuladas = List((50, 50), (150, 120), (250, 300), (100, 90), (0, 0))
+
+  for ((x, y) <- posicionesSimuladas) {
+    Thread.sleep(500) // Simula un retraso de 500 ms entre actualizaciones
+    mouseX() = x
+    mouseY() = y
+  }
+}
+```
+
+#### Imagen de Ejecución
+
+![image](https://github.com/user-attachments/assets/bd407c7e-fe88-4d78-b315-3e00f4371e7a)
+
+
 > Adjuntar capturas de ejecución
 
 ### Calificación:
