Parte1 Update b2s11.md

--- a/b2s11.md
+++ b/b2s11.md
@@ -29,8 +29,72 @@
 - Ahora modiﬁque el case class para que el atributo runtime sea del tipo
 `Option[Double]` y vuelva a responder las preguntas anteriores.
 
+#### Aplicacion del Codigo en Scala
+```scala
+import kantan.csv._
+import kantan.csv.ops._
+import kantan.csv.generic._
+import java.io.File
 
-> Adjuntar código y capturas de ejecución
+case class Movie(
+                  adult: Boolean,
+                  belongs_to_collection: String,
+                  budget: Int,
+                  genres: String,
+                  homepage: String,
+                  id: Int,
+                  imdb_id: String,
+                  original_language: String,
+                  original_title: String,
+                  overview: String,
+                  popularity: Double,
+                  poster_path: String,
+                  production_companies: String,
+                  production_countries: String,
+                  release_date: String,
+                  revenue: Double,
+                  runtime: Double,
+                  spoken_languages: String,
+                  status: String,
+                  tagline: String,
+                  title: String,
+                  video: Boolean,
+                  vote_average: Double,
+                  vote_count: Int,
+                  keywords: String,
+                  cast: String,
+                  crew: String,
+                  ratings: String
+                )
+
+object Movies extends App {
+  val path2DataFile2 = "C:\\Users\\bvalv\\OneDrive\\Escritorio\\pi_movies_complete.csv"
+
+  // Configurar lectura del CSV con delimitador ';'
+  val dataSource2 = new File(path2DataFile2)
+    .readCsv[List, Movie](rfc.withHeader.withCellSeparator(';'))
+
+  // Filtrar filas válidas
+  val rowsRight = dataSource2.collect {
+    case Right(movie) => movie
+  }
+
+  val cantidadR = rowsRight.length // Registrar la longitud de la lista con las filas validas
+
+  // Filtrar filas no validas
+  val rowsLeft = dataSource2.collect {
+    case Left(movie) => movie
+  }
+
+  val cantidadL = rowsLeft.length // Registrar la longitud de la lista con las filas invalidas
+
+  println(f"Filas validas: $cantidadR ; Filas invalidas: $cantidadL")
+```
+
+#### Captura de Pantalla de Ejecución
+
+![image](https://github.com/user-attachments/assets/4b75a596-ea78-40e9-b39c-cd66f9ab63d0)
+
 
 ### Parte 2: Análisis de datos
 
