Parte1 Update 2 b2s11.md

--- a/b2s11.md
+++ b/b2s11.md
@@ -26,10 +26,7 @@
   - ¿Cuántos ﬁlas son `Right`?
   - ¿Cuántos ﬁlas son `Left`?
 
-- Ahora modiﬁque el case class para que el atributo runtime sea del tipo
-`Option[Double]` y vuelva a responder las preguntas anteriores.
-
-#### Aplicacion del Codigo en Scala
+ #### Aplicacion del Codigo en Scala
 ```scala
 import kantan.csv._
 import kantan.csv.ops._
@@ -94,6 +91,35 @@ object Movies extends App {
 #### Captura de Pantalla de Ejecución
 
 ![image](https://github.com/user-attachments/assets/4b75a596-ea78-40e9-b39c-cd66f9ab63d0)
+
+- Ahora modiﬁque el case class para que el atributo runtime sea del tipo
+`Option[Double]` y vuelva a responder las preguntas anteriores.
+
+#### Aplicacion del Código
+```scala
+println("El atributo runtime sea del tipo Option[Double]")
+  val rows = dataSource2.collect {
+    case Right(movie) => movie
+    case Left(movie) => movie
+  }
+  val rowsR = dataSource2.collect {
+    case Right(movie) => movie
+  }
+  val rowsL = dataSource2.collect {
+    case Left(movie) => movie
+  }
+  val nro_datos = rows.length
+  println("Filas Totales: "+nro_datos) // 3497 Filas Totales
+  val nro_datos_R = rowsR.length
+  println("Filas Validas: "+nro_datos_R) // 3471 Filas validas
+  val nro_datos_L = rowsL.length
+  println("Filas Invalidas: "+nro_datos_L) // 26 Filas invalidas
+```
+
+#### Captura de Pantalla de Ejecucion
+
+![image](https://github.com/user-attachments/assets/5ae474b3-a4a3-426a-aed5-490355c5ee24)
+
 
 
 ### Parte 2: Análisis de datos
