Parte2 Update b2s11.md

--- a/b2s11.md
+++ b/b2s11.md
@@ -134,7 +134,42 @@ println("El atributo runtime sea del tipo Option[Double]")
 
   Donde $x_i$ es la calificación de cada película, $\overline{x}$ es el promedio de las calificaciones y $n$ es el número total de películas.
 
-> Adjuntar los bloques de código y capturas de ejecución
+#### Aplicación del código en Scala
+```scala
+val rows = dataSource2.collect {
+    case Right(movie) => movie
+  }
+  val runtimes = rows.map(_.runtime)
+  val runtimePromedio = runtimes.sum / runtimes.size
+
+  val peliculaMasVotada = rows.maxByOption(_.vote_count)
+
+  println(f"El tiempo promedio de duración es: $runtimePromedio%.2f minutos")
+  peliculaMasVotada match {
+    case Some(movie) =>
+      println(s"La película con más votos es '${movie.title}' con ${movie.vote_count} votos.")
+  }
+
+  // Calcular desviacion estandar de "runtime"
+  // Promedio calificaciones peliculas
+  val runtimes = rowsRight.map(_.runtime)
+  val runtimePromedio = runtimes.sum / runtimes.size
+
+  val varianza = runtimes.map(runtime => Math.pow(runtime - runtimePromedio, 2)).sum / runtimes.size
+  val desviacionEstandar = Math.sqrt(varianza)
+
+  println(f"Promedio Tiempo de ejecución de peliculas: $runtimePromedio%.2f")
+  println(f"Desviacion Estandar: $desviacionEstandar%.2f")
+```
+
+#### Captura de Ejecucion del Codigo
+
+![image](https://github.com/user-attachments/assets/19ff9449-c7f8-443b-9918-24ddfe29bbea)
+
+![image](https://github.com/user-attachments/assets/3af29559-6a20-4501-b760-a2641efd2cd7)
+
+![image](https://github.com/user-attachments/assets/4fe81144-1cbb-47fb-9371-762b6c6286c4)
+
 
 ### Calificación:
 
